tests/errors/first_stage/.string/extra_chars/extra_chars.am
myStr: .string "Hello, OpenU!" openU
